fixed single post search result stretching out issue on desktop

--- a/src/components/BlogContainer/BlogContainer.module.css
+++ b/src/components/BlogContainer/BlogContainer.module.css
@@ -10,10 +10,12 @@
 .post_card {
   display: flex;
   flex-direction: row;
-  margin: 20px;
   box-shadow: 0 0.0775rem 0.3rem rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   overflow: hidden;
+  width: 350px;
+  height: 420px;
+  margin: 20px auto;
 }
 
 .post_image {
